# template-python-repo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/template_python_repo/: __init__.py
